fix: scroll now only works on x axis

--- a/index.html
+++ b/index.html
@@ -18,74 +18,77 @@
     <link rel="stylesheet" href="assets/css/5.components.css" />
   </head>
   <body>
-    <header class="hero">
-      <div class="hero__body">
-        <h1>Manage<br />Ops</h1>
-        <h2>We believe great tech leaders make great tech organizations</h2>
-      </div>
-    </header>
-
-    <section class="container">
-      <div class="box decoration">
-        <img
-          class="box__img"
-          src="assets/images/img1.jpeg"
-          alt="ManageOps Birmingham"
-        />
-      </div>
-      <h3 class="h-title">
-        Our mission is to help tech leaders and their teams be the best they can
-        be.
-      </h3>
-      <p>
-        One of the biggest reasons for attrition in the workplace is bad
-        leadership. 34% of those that quit their job cited uncaring and
-        uninspiring leaders as their reason for leaving.
-      </p>
-
-      <p>
-        We want to build a world where this isn't the case. Where all leaders,
-        and managers from Engineering Managers to CTOs to Delivery Manager,
-        build incredible teams; empowering and encouraging engineers to build
-        amazing technology.
-      </p>
-    </section>
-
-    <section class="container">
-      <div class="box decoration-dots">
-        <img
-          class="box__img"
-          src="assets/images/img3.png"
-          alt="ManageOps Birmingham"
-        />
-      </div>
-      <h3 class="h-title h-title--alt">
-        Together we can become better tech leaders.
-      </h3>
-      <p>
-        Our community of Engineering Managers and Technical Leaders share their
-        knowledge and experience to help each other succeed.
-      </p>
-      <p>
-        By also partnering with other industry experts for their input we
-        believe that we all grow and develop into first class leaders together.
-      </p>
-    </section>
-
-    <section class="container">
-      <h3>Join the community</h3>
-
-      <a href="https://www.meetup.com/ManageOps/" class="activity">
-        <div class="activity__content">
-          <h4>Meetup</h4>
-          <p>
-            Our monthly meetups include content from our industry leaders in the
-            community and a Round Table session to ask questions to the group
-          </p>
+    <div class="scroll">
+      <header class="hero">
+        <div class="hero__body">
+          <h1>Manage<br />Ops</h1>
+          <h2>We believe great tech leaders make great tech organizations</h2>
         </div>
-      </a>
+      </header>
 
-      <!-- 
+      <section class="container">
+        <div class="box decoration">
+          <img
+            class="box__img"
+            src="assets/images/img1.jpeg"
+            alt="ManageOps Birmingham"
+          />
+        </div>
+        <h3 class="h-title">
+          Our mission is to help tech leaders and their teams be the best they
+          can be.
+        </h3>
+        <p>
+          One of the biggest reasons for attrition in the workplace is bad
+          leadership. 34% of those that quit their job cited uncaring and
+          uninspiring leaders as their reason for leaving.
+        </p>
+
+        <p>
+          We want to build a world where this isn't the case. Where all leaders,
+          and managers from Engineering Managers to CTOs to Delivery Manager,
+          build incredible teams; empowering and encouraging engineers to build
+          amazing technology.
+        </p>
+      </section>
+
+      <section class="container">
+        <div class="box decoration-dots">
+          <img
+            class="box__img"
+            src="assets/images/img3.png"
+            alt="ManageOps Birmingham"
+          />
+        </div>
+        <h3 class="h-title h-title--alt">
+          Together we can become better tech leaders.
+        </h3>
+        <p>
+          Our community of Engineering Managers and Technical Leaders share
+          their knowledge and experience to help each other succeed.
+        </p>
+        <p>
+          By also partnering with other industry experts for their input we
+          believe that we all grow and develop into first class leaders
+          together.
+        </p>
+      </section>
+
+      <section class="container">
+        <h3>Join the community</h3>
+
+        <a href="https://www.meetup.com/ManageOps/" class="activity">
+          <div class="activity__content">
+            <h4>Meetup</h4>
+            <p>
+              Our monthly meetups include content from our industry leaders in
+              the community and a Round Table session to ask questions to the
+              group
+            </p>
+          </div>
+        </a>
+
+        <!-- 
       SNEAKY SNEAKY 
       <a href="#" class="box box--link meetup">
       <div class="box__content">
@@ -96,27 +99,28 @@
         </p>
       </div>
     </a> -->
-    </section>
-    <footer class="footer">
-      <h3>Keep in contact</h3>
-      <ul>
-        <li>
-          <a href="https://twitter.com/ManageOps">Twitter</a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/company/manageops/">LinkedIn</a>
-        </li>
-        <li>
-          <a href="https://www.meetup.com/ManageOps/">Meetup</a>
-        </li>
-      </ul>
-      <!-- <h3>More information</h3>
+      </section>
+      <footer class="footer">
+        <h3>Keep in contact</h3>
+        <ul>
+          <li>
+            <a href="https://twitter.com/ManageOps">Twitter</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/company/manageops/">LinkedIn</a>
+          </li>
+          <li>
+            <a href="https://www.meetup.com/ManageOps/">Meetup</a>
+          </li>
+        </ul>
+        <!-- <h3>More information</h3>
       <ul>
         <li><a href="#">Code of Conduct</a></li>
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Team</a></li>
       </ul> -->
-      <p class="small">© 2023 ManageOps. All rights reserved.</p>
-    </footer>
+        <p class="small">© 2023 ManageOps. All rights reserved.</p>
+      </footer>
+    </div>
   </body>
 </html>
