feat: activites styling

--- a/index.html
+++ b/index.html
@@ -26,69 +26,78 @@
         </div>
       </header>
 
-      <section class="container">
-        <div class="box decoration">
-          <img
-            class="box__img"
-            src="assets/images/img1.jpeg"
-            alt="ManageOps Birmingham"
-          />
-        </div>
-        <h3 class="h-title">
-          Our mission is to help tech leaders and their teams be the best they
-          can be.
-        </h3>
-        <p>
-          One of the biggest reasons for attrition in the workplace is bad
-          leadership. 34% of those that quit their job cited uncaring and
-          uninspiring leaders as their reason for leaving.
-        </p>
-
-        <p>
-          We want to build a world where this isn't the case. Where all leaders,
-          and managers from Engineering Managers to CTOs to Delivery Manager,
-          build incredible teams; empowering and encouraging engineers to build
-          amazing technology.
-        </p>
-      </section>
-
-      <section class="container">
-        <div class="box decoration-dots">
-          <img
-            class="box__img"
-            src="assets/images/img3.png"
-            alt="ManageOps Birmingham"
-          />
-        </div>
-        <h3 class="h-title h-title--alt">
-          Together we can become better tech leaders.
-        </h3>
-        <p>
-          Our community of Engineering Managers and Technical Leaders share
-          their knowledge and experience to help each other succeed.
-        </p>
-        <p>
-          By also partnering with other industry experts for their input we
-          believe that we all grow and develop into first class leaders
-          together.
-        </p>
-      </section>
-
-      <section class="container">
-        <h3>Join the community</h3>
-
-        <a href="https://www.meetup.com/ManageOps/" class="activity">
-          <div class="activity__content">
-            <h4>Meetup</h4>
-            <p>
-              Our monthly meetups include content from our industry leaders in
-              the community and a Round Table session to ask questions to the
-              group
-            </p>
+      <section class="container grid grid--reverse">
+        <div class="grid__item">
+          <div class="box decoration">
+            <img
+              class="box__img"
+              src="assets/images/img1.jpeg"
+              alt="ManageOps Birmingham"
+            />
           </div>
-        </a>
+        </div>
+        <div class="grid__item">
+          <h3 class="h-title">
+            Our mission is to help tech leaders and their teams be the best they
+            can be.
+          </h3>
+          <p>
+            One of the biggest reasons for attrition in the workplace is bad
+            leadership. 34% of those that quit their job cited uncaring and
+            uninspiring leaders as their reason for leaving.
+          </p>
 
-        <!-- 
+          <p>
+            We want to build a world where this isn't the case. Where all
+            leaders, and managers from Engineering Managers to CTOs to Delivery
+            Manager, build incredible teams; empowering and encouraging
+            engineers to build amazing technology.
+          </p>
+        </div>
+      </section>
+
+      <section class="container grid">
+        <div class="grid__item">
+          <div class="box decoration-dots">
+            <img
+              class="box__img"
+              src="assets/images/img3.png"
+              alt="ManageOps Birmingham"
+            />
+          </div>
+        </div>
+        <div class="grid__item">
+          <h3 class="h-title h-title--alt">
+            Together we can become better tech leaders.
+          </h3>
+          <p>
+            Our community of Engineering Managers and Technical Leaders share
+            their knowledge and experience to help each other succeed.
+          </p>
+          <p>
+            By also partnering with other industry experts for their input we
+            believe that we all grow and develop into first class leaders
+            together.
+          </p>
+        </div>
+      </section>
+
+      <section class="container">
+        <h3 class="activities__title">Join the community</h3>
+
+        <div class="activities">
+          <a href="https://www.meetup.com/ManageOps/" class="activity">
+            <div class="activity__content">
+              <h4>Meetup</h4>
+              <p>
+                Our monthly meetups include content from our industry leaders in
+                the community and a Round Table session to ask questions to the
+                group
+              </p>
+            </div>
+          </a>
+
+          <!-- 
       SNEAKY SNEAKY 
       <a href="#" class="box box--link meetup">
       <div class="box__content">
@@ -98,7 +107,9 @@
           leaders.
         </p>
       </div>
+      
     </a> -->
+        </div>
       </section>
       <footer class="footer">
         <h3>Keep in contact</h3>
