feat: nice desktop footer and better media quieries

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         </div>
       </section>
       <footer class="footer">
-        <h3>Keep in contact</h3>
-        <ul>
+        <h3>Keep in contact:</h3>
+        <ul class="footer__links">
           <li>
             <a href="https://twitter.com/ManageOps">Twitter</a>
           </li>
@@ -130,7 +130,9 @@
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Team</a></li>
       </ul> -->
-        <p class="small">© 2023 ManageOps. All rights reserved.</p>
+        <p class="footer__colophon small">
+          © 2023 ManageOps. All rights reserved.
+        </p>
       </footer>
     </div>
   </body>
