feat: Code of conduct page

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       </ul> -->
         <p class="footer__colophon small">
           © 2023 ManageOps. All rights reserved.
+          <a href="/code-of-conduct/">Code of conduct</a>
         </p>
       </footer>
     </div>
